# ansible-tool

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_template_metadata.py  0003_settings_domains.py  0004_runtime_state_persistence.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  security.py
backend/app/db/: bootstrap.py
backend/app/models/: __init__.py  audit.py  auth.py  base.py  content.py  credentials.py  inventory.py  jobs.py  system.py
backend/app/modules/audit/: repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: repository.py  router.py  schemas.py  service.py
backend/app/modules/cli_converter/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/credentials/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/inventory/: repository.py  router.py  schemas.py  service.py
backend/app/modules/jobs/: __init__.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/playbooks/: __init__.py  repository.py  router.py  schemas.py  service.py
backend/app/schemas/: common.py
backend/app/services/: __init__.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_health.py  test_query_lists.py
backend/tests/services/: test_cli_converter.py  test_credentials.py  test_templates.py
docs/: architecture.md
(+66 files in other folders)
